added timer functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <button id="leaderboard">Leaderboard</button>
-    <p id="timer">Time Remaining:</p>
+    <p id="timer" class="hidden">Time Remaining:</p>
     <div id="quiz-area" class="shown">
         <h1>Coding Quiz Challenge</h1>
         <p>Try to answer the following code-related questions within the time limit.<br> Keep in mind that incorrect
