added question element population and ability to remove question from array once asked

--- a/index.html
+++ b/index.html
@@ -19,21 +19,13 @@
     </div>
     <div id="question-area" class="hidden">
         <!-- Insert question here -->
-        <h1></h1>
+        <h1 id="question"></h1>
         <!-- populate with options -->
         <ol>
-            <li>
-
-            </li>
-            <li>
-
-            </li>
-            <li>
-
-            </li>
-            <li>
-
-            </li>
+            <li id="option1"></li>
+            <li id="option2"></li>
+            <li id="option3"></li>
+            <li id="option4"></li>
         </ol>
         <!-- Insert correct or incorrect here -->
         <h2></h2>
@@ -42,7 +34,6 @@
     <div id="leaderboard-area" class="hidden">
         <h1>Leader board</h1>
         <ol>
-
         </ol>
     </div>
     <script src="script.js"></script>
