--- a/index.html
+++ b/index.html
@@ -34,16 +34,17 @@
     <!-- Leaderboard screen -->
     <div id="leaderboard-area" class="hidden">
         <h1>Leader board</h1>
-        <ol>
+        <ol id="leaderlist">
         </ol>
+        <button id="clear-leaderboard">Clear Leaderboard</button>
     </div>
     <!-- Gameover score area -->
     <div id="gameover" class="hidden">
         <h1>GAMEOVER!</h1>
         <h2 id="score"></h2>
         <form method="POST">
-            <label for="Initials">Initials</label>
-            <input type="text" minlength="3" maxlength="3" name="Initials" id="Initials" placeholder="Type Initials Here"/>
+            <label for="Initials">Your Initials</label>
+            <input type="text" maxlength="3" name="Initials" id="Initials" placeholder="Type Initials Here"/>
             <div id="warning"></div>
             <button id="initial-submit">Submit</button>
         </form>
